--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  flutter_localizations:
+    sdk: flutter
+
   flutter_lints: ^2.0.0
 
 flutter:
